# butlerbot

./: .gitignore  Instructions.md  README.md
butlerbot/: ec2-bootstrap.sh
butlerbot/backend/: ai.py  butlerbotai-5722438492a5.json  context.py  create_customer.py  fetch_items.py  get_catalog.py  main.py  my_api.py  nginx.conf  pyproject.toml  requirements.txt  stt.py  util.py
butlerbot/backend/SquareAPI/: helper_function.py  square_api.py
butlerbot/backend/google/: tts.py
butlerbot/backend/google_api/: stt.py  tts.py
butlerbot/backend/square/: helper_function.py  square_app.py
butlerbot/backend/square_api/: helper_function.py  merchant.py  merchent.py  oauth_client.py  square_app.py
butlerbot/frontend/: ec2-bootstrap.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
butlerbot/frontend-ai/: index.html  package-lock.json  package.json
butlerbot/frontend-ai/src/: App.tsx  speech-manager.ts
butlerbot/frontend/src/: .env.development  App.tsx  Error.tsx  RegisterCookie.tsx  enums.ts  index.css  main.tsx  speech-manager.ts
butlerbot/frontend/src/components/: BotChat.tsx  Cart.tsx  Chat.tsx  MenuItems.tsx  ModalContainer.tsx  RecorderError.tsx  index.js
butlerbot/frontend/src/hooks/: index.js  useAudioRecorder.tsx  useCookie.tsx  useVADRecorder.tsx
butlerbot/frontend/src/pages/: Chat.tsx  Home.tsx  HomePage.tsx  Login.tsx  LoginPage.tsx  RegisterCookie.tsx  SetupPage.tsx  SquareConnectionRegisterer.tsx  Test.tsx  index.js  index.tsx
butlerbot/frontend/src/utils/: SpeechManager.ts
