[tool.poetry]
name = "butlerbot"
version = "0.1.0"
description = "An AI drive-through assistant"
authors = ["sahilkotak <40324523+sahilkotak@users.noreply.github.com>", "kevin patel <kevinmanojpatel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = ">=0.28.0,<0.29.0"
fastapi = ">=0.103.1,<0.104.0"
gtts = ">=2.3.2,<2.4.0"
python-multipart = ">=0.0.6,<0.1.0"
ffmpeg-python = ">=0.2.0,<0.3.0"
pydantic = ">=2.3.0,<2.4.0"
uvicorn = ">=0.23.2,<0.24.0"
pydub = ">=0.25.1,<0.26.0"
requests = ">=2.31.0,<2.32.0"
google-cloud-speech = "^2.21.0"
squareup = "^31.0.0.20230925"
urllib3 = "^1.26.17"
boto3 = "^1.28.61"
google-cloud-texttospeech = "^2.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
